--- a/docs/.vuepress/public/resource/configuration.json
+++ b/docs/.vuepress/public/resource/configuration.json
@@ -12,11 +12,18 @@
   "sidebar": {
     "/note/": [
       {
+        "title": "HTML",
+        "collapsable": false,
+        "children": [
+          "html/svg"
+        ]
+      },
+      {
         "title": "CSS",
         "collapsable": false,
         "children": [
           "css/ellipsis",
-          "css/vertical",
+          "css/align",
           "css/background-clip",
           "css/reflowAndRepaint"
         ]
@@ -37,7 +44,9 @@
         "title": "Vue",
         "collapsable": false,
         "children": [
-          "vue/whydataisfn"
+          "vue/whydataisfn",
+          "vue/whitescreen",
+          "vue/mixin"
         ]
       },
       {
